--- a/index.html
+++ b/index.html
@@ -177,13 +177,22 @@
               add("GPS情報", JSON.stringify({
                 latitude: position.coords.latitude,
                 longitude: position.coords.longitude,
-                accuracy: position.coords.accuracy
+                accuracy: position.coords.accuracy,
+                altitude: position.coords.altitude,
+                altitudeAccuracy: position.coords.altitudeAccuracy,
+                heading: position.coords.heading,
+                speed: position.coords.speed
               }, null, 2));
               document.getElementById("output").innerHTML = out.join("\n");
             },
             error => {
               add("GPS情報", `エラー: ${error.message}`);
               document.getElementById("output").innerHTML = out.join("\n");
+            },
+            {
+              enableHighAccuracy: true,
+              timeout: 10000,
+              maximumAge: 0
             }
           );
         } catch (e) {
