--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
                 altitudeAccuracy: position.coords.altitudeAccuracy,
                 heading: position.coords.heading,
                 speed: position.coords.speed
-              }, null, 2));
-              
+              }, null, 2));              
               // Googleマップリンクの生成
+              const latitude = position.coords.latitude;
+              const longitude = position.coords.longitude;
               const mapUrl = "https://www.google.com/maps?q=" + latitude + "," + longitude;
-              add("Google map", `<a href="${mapUrl}" target="_blank">地図を表示</a>`);
-              
+              add("Google map", `<a href="${mapUrl}" target="_blank">地図を表示</a>`);              
               document.getElementById("output").innerHTML = out.join("\n");
             },
             error => {
