--- a/index.html
+++ b/index.html
@@ -8,43 +8,114 @@
     body {
       background-color: #121212;
       color: #e0e0e0;
-      font-family: sans-serif;
+      font-family: "Segoe UI", sans-serif;
       padding: 20px;
     }
     h1 {
       color: #bb86fc;
+      text-align: center;
     }
-    h2 {
-      color: #03dac6;
+    .section {
+      margin-bottom: 15px;
+      border: 1px solid #333;
+      border-radius: 5px;
+      overflow: hidden;
     }
-    pre {
-      background-color: #1e1e1e;
+    .section h2 {
+      margin: 0;
       padding: 10px;
+      background-color: #1f1f1f;
+      cursor: pointer;
+      user-select: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .section h2 span {
+      font-size: 0.9em;
+      color: #999;
+    }
+    .section pre {
+      margin: 0;
+      padding: 10px;
+      background-color: #1e1e1e;
       overflow-x: auto;
       white-space: pre-wrap;
-      border-left: 4px solid #333;
     }
     .error {
       color: #cf6679;
+    }
+    a {
+      color: #03dac6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .spinner {
+      border: 4px solid #333;
+      border-top: 4px solid #bb86fc;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 20px auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    button.copyBtn {
+      margin-left: 10px;
+      padding: 2px 6px;
+      font-size: 0.8em;
+      cursor: pointer;
+      background-color: #333;
+      border: 1px solid #555;
+      color: #e0e0e0;
+      border-radius: 3px;
     }
   </style>
 </head>
 <body>
   <h1>完全ブラウザ診断ツール</h1>
-  <div id="output">読み込み中...</div>
+  <div id="output">
+    <div class="spinner"></div>
+  </div>
 
   <script>
-    async function collectInfo() {
-      const out = [];
+    function createSection(title, content) {
+      const section = document.createElement('div');
+      section.className = 'section';
 
-      const add = (title, data) => {
-        out.push(`<h2>${title}</h2><pre>${data}</pre>`);
-      };
+      const header = document.createElement('h2');
+      header.innerHTML = `${title} <span>▼</span>`;
+      const pre = document.createElement('pre');
+      pre.innerHTML = content;
+
+      header.addEventListener('click', () => {
+        pre.style.display = pre.style.display === 'none' ? 'block' : 'none';
+        header.querySelector('span').textContent = pre.style.display === 'none' ? '▶' : '▼';
+      });
+
+      section.appendChild(header);
+      section.appendChild(pre);
+      return section;
+    }
+
+    function addSection(title, content) {
+      const section = createSection(title, content);
+      document.getElementById("output").appendChild(section);
+    }
+
+    async function collectInfo() {
+      const output = document.getElementById("output");
+      output.innerHTML = ''; // スピナー削除
 
       const nav = navigator;
 
-      // 基本情報
-      add("Navigator", JSON.stringify({
+      // --- Navigator基本情報 ---
+      addSection("Navigator", JSON.stringify({
         userAgent: nav.userAgent,
         platform: nav.platform,
         language: nav.language,
@@ -57,41 +128,53 @@
         webdriver: nav.webdriver
       }, null, 2));
 
-      // スクリーン & ウィンドウ
-      add("画面", JSON.stringify({
+      // --- Navigator.userAgentData ---
+      if ('userAgentData' in navigator) {
+        try {
+          const uaData = await navigator.userAgentData.getHighEntropyValues([
+            "brands", "mobile", "platform", "platformVersion", "architecture", "model", "bitness"
+          ]);
+          addSection("Navigator.userAgentData", JSON.stringify(uaData, null, 2));
+        } catch (e) {
+          addSection("Navigator.userAgentData", "取得失敗");
+        }
+      } else {
+        addSection("Navigator.userAgentData", "サポートされていません");
+      }
+
+      // --- 画面情報 ---
+      addSection("画面", JSON.stringify({
         screen: {
           width: screen.width,
           height: screen.height,
           colorDepth: screen.colorDepth
         },
         window: {
-          innerWidth: innerWidth,
-          innerHeight: innerHeight,
-          outerWidth: outerWidth,
-          outerHeight: outerHeight,
-          devicePixelRatio: devicePixelRatio
+          innerWidth, innerHeight, outerWidth, outerHeight, devicePixelRatio
         }
       }, null, 2));
 
-      // タイムゾーン
-      add("タイムゾーン", Intl.DateTimeFormat().resolvedOptions().timeZone);
+      // --- タイムゾーン ---
+      addSection("タイムゾーン", Intl.DateTimeFormat().resolvedOptions().timeZone);
 
-      // WebGL 情報
+      // --- WebGL ---
       try {
         const canvas = document.createElement('canvas');
         const gl = canvas.getContext('webgl');
         const ext = gl.getExtension('WEBGL_debug_renderer_info');
         if (ext) {
-          add("WebGL", JSON.stringify({
+          addSection("WebGL", JSON.stringify({
             vendor: gl.getParameter(ext.UNMASKED_VENDOR_WEBGL),
             renderer: gl.getParameter(ext.UNMASKED_RENDERER_WEBGL)
           }, null, 2));
+        } else {
+          addSection("WebGL", "サポートされていません");
         }
       } catch (e) {
-        add("WebGL", "取得失敗");
+        addSection("WebGL", "取得失敗");
       }
 
-      // Canvas Fingerprinting
+      // --- Canvas Fingerprint ---
       try {
         const canvas = document.createElement("canvas");
         const ctx = canvas.getContext("2d");
@@ -101,18 +184,16 @@
         ctx.fillRect(0, 0, 100, 30);
         ctx.fillStyle = "#069";
         ctx.fillText("canvas fingerprint", 2, 2);
-        const dataUrl = canvas.toDataURL();
-        add("Canvas Fingerprint (DataURL)", dataUrl);
+        addSection("Canvas Fingerprint (DataURL)", canvas.toDataURL());
       } catch (e) {
-        add("Canvas Fingerprint", "取得失敗");
+        addSection("Canvas Fingerprint", "取得失敗");
       }
 
-      // Audio Fingerprinting
+      // --- Audio Fingerprint ---
       try {
         const ctx = new (window.AudioContext || window.webkitAudioContext)();
         const oscillator = ctx.createOscillator();
         const analyser = ctx.createAnalyser();
-        const gain = ctx.createGain();
         const script = ctx.createScriptProcessor(4096, 1, 1);
         const freqData = new Float32Array(analyser.frequencyBinCount);
         oscillator.type = "triangle";
@@ -123,139 +204,78 @@
         oscillator.start();
         await new Promise(r => setTimeout(r, 500));
         analyser.getFloatFrequencyData(freqData);
-        add("Audio Fingerprint (first 10 bins)", freqData.slice(0, 10).join(", "));
+        addSection("Audio Fingerprint (first 10 bins)", freqData.slice(0, 10).join(", "));
         oscillator.stop();
         ctx.close();
       } catch (e) {
-        add("Audio Fingerprint", "取得失敗");
+        addSection("Audio Fingerprint", "取得失敗");
       }
 
-      // WebRTC IP取得 (STUN)
-      try {
-        const ips = new Set();
-        const pc = new RTCPeerConnection({
-          iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
-        });
-        pc.createDataChannel("dummy");
-        pc.onicecandidate = e => {
-          if (e.candidate) {
-            const ipMatch = e.candidate.candidate.match(/([0-9]{1,3}(\.[0-9]{1,3}){3})/);
-            if (ipMatch) {
-              ips.add(ipMatch[1]);
-              add("WebRTC ローカルIP", Array.from(ips).join("\n"));
-              document.getElementById("output").innerHTML = out.join("\n");
-            }
-          }
-        };
-        await pc.createOffer().then(offer => pc.setLocalDescription(offer));
-        setTimeout(() => pc.close(), 2000);
-      } catch (e) {
-        add("WebRTC IP", "取得失敗");
-      }
-
-      // デバイスのストレージ情報
-      if ('storage' in navigator) {
-        try {
-          const storageEstimate = await navigator.storage.estimate();
-          add("デバイスのストレージ", JSON.stringify({
-            total: storageEstimate.quota,
-            used: storageEstimate.usage,
-            remaining: storageEstimate.quota - storageEstimate.usage
-          }, null, 2));
-        } catch (e) {
-          add("デバイスのストレージ", "取得失敗");
-        }
-      } else {
-        add("デバイスのストレージ", "サポートされていません");
-      }
-
-      // GPS情報の取得
+      // --- GPS情報 ---
       if ("geolocation" in navigator) {
-        try {
-          navigator.geolocation.getCurrentPosition(
-            position => {
-              add("GPS情報", JSON.stringify({
-                latitude: position.coords.latitude,
-                longitude: position.coords.longitude,
-                accuracy: position.coords.accuracy,
-                altitude: position.coords.altitude,
-                altitudeAccuracy: position.coords.altitudeAccuracy,
-                heading: position.coords.heading,
-                speed: position.coords.speed
-              }, null, 2));              
-              // Googleマップリンクの生成
-              const latitude = position.coords.latitude;
-              const longitude = position.coords.longitude;
-              const mapUrl = "https://www.google.com/maps?q=" + latitude + "," + longitude;
-              add("Google map", `<a href="${mapUrl}" target="_blank">地図を表示</a>`);              
-              document.getElementById("output").innerHTML = out.join("\n");
-            },
-            error => {
-              add("GPS情報", `エラー: ${error.message}`);
-              document.getElementById("output").innerHTML = out.join("\n");
-            },
-            {
-              enableHighAccuracy: true,
-              timeout: 10000,
-              maximumAge: 0
-            }
-          );
-        } catch (e) {
-          add("GPS情報", "取得失敗");
-          document.getElementById("output").innerHTML = out.join("\n");
-        }
+        navigator.geolocation.getCurrentPosition(
+          position => {
+            addSection("GPS情報", JSON.stringify({
+              latitude: position.coords.latitude,
+              longitude: position.coords.longitude,
+              accuracy: position.coords.accuracy
+            }, null, 2));
+            const mapUrl = "https://www.google.com/maps?q=" + position.coords.latitude + "," + position.coords.longitude;
+            addSection("Google map", `<a href="${mapUrl}" target="_blank">地図を表示</a>`);
+          },
+          error => {
+            addSection("GPS情報", `エラー: ${error.message}`);
+          },
+          { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+        );
       } else {
-        add("GPS情報", "サポートされていません");
-        document.getElementById("output").innerHTML = out.join("\n");
+        addSection("GPS情報", "サポートされていません");
       }
 
-      // バッテリー情報
+      // --- バッテリー ---
       if (navigator.getBattery) {
         try {
           const battery = await navigator.getBattery();
-          add("バッテリー情報", JSON.stringify({
+          addSection("バッテリー情報", JSON.stringify({
             level: battery.level * 100 + "%",
             charging: battery.charging ? "充電中" : "充電されていません",
             chargingTime: battery.chargingTime,
             dischargingTime: battery.dischargingTime
           }, null, 2));
         } catch (e) {
-          add("バッテリー情報", "取得失敗");
+          addSection("バッテリー情報", "取得失敗");
         }
       } else {
-        add("バッテリー情報", "サポートされていません");
+        addSection("バッテリー情報", "サポートされていません");
       }
 
-      // ネットワーク情報
+      // --- ネットワーク情報 ---
       if ('connection' in navigator) {
         const connection = navigator.connection || navigator.mozConnection || navigator.webkitConnection;
-        add("ネットワーク情報", JSON.stringify({
+        addSection("ネットワーク情報", JSON.stringify({
           effectiveType: connection.effectiveType,
           downlink: connection.downlink,
           rtt: connection.rtt
         }, null, 2));
       } else {
-        add("ネットワーク情報", "サポートされていません");
+        addSection("ネットワーク情報", "サポートされていません");
       }
 
-      // 言語設定
-      add("言語設定", JSON.stringify({
+      // --- 言語設定 ---
+      addSection("言語設定", JSON.stringify({
         language: navigator.language,
         languages: navigator.languages
       }, null, 2));
 
-      // 画面の向き
+      // --- 画面の向き ---
       if (screen.orientation) {
-        add("画面の向き", JSON.stringify({
+        addSection("画面の向き", JSON.stringify({
           type: screen.orientation.type,
           angle: screen.orientation.angle
         }, null, 2));
       } else {
-        add("画面の向き", "サポートされていません");
+        addSection("画面の向き", "サポートされていません");
       }
-
-      // 出力
-      document.getElementById("output").innerHTML = out.join("\n");
     }
 
     collectInfo();
