--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ pre {
   padding: 8px 0 12px;
   white-space: pre-wrap;
   word-break: break-word;
-  max-height: 0;
+  max-height: 5000px;
   overflow: hidden;
   transition: max-height 0.35s ease;
   font-size: 0.9rem;
